<resources>
    <string name="app_name">ITIS Timetable</string>
    <string name="search_group_title">Search for group</string>
    <string name="open_timetable_title">Open timetable</string>
    <string name="placeholders">%1$s %2$d</string>
    <string name="course_text">Course</string>
    <string name="select_group_hint">Select a group to view schedules</string>
    <string name="hide_from_schedule_title">Hide from schedule</string>
    <string name="show_in_schedule_title">Show in schedule</string>
    <string name="subject_title">Subject</string>
    <string name="choose_elective_course_title">Choose elective course</string>
    <string name="select_no_courses_hint">Your course is not here?</string>
    <string name="select_nothing_title">Select nothing</string>
    <string name="lecture_subject_type">Lecture</string>
    <string name="seminar_subject_type">Practice</string>
    <string name="undefined_enum_name">Type undefined</string>
    <string name="confirm_title">Confirm</string>
    <string name="course_is_not_selected_message">Course is not selected</string>
    <string name="hide_elective_course_title">Hide elective course</string>
    <string name="very_meaningful_message">Bruh</string>
    <string name="settings_title">Settings</string>
    <string name="select_group_title">Select group</string>
    <string name="hidden_subjects_title">Hidden subjects</string>
    <string name="synchronized_hint">Synchronized</string>
    <string name="choose_english_group_title">Choose english group</string>
    <string name="ordinary_subject_kind">Ordinary lesson</string>
    <string name="physical_subject_kind">Physical culture</string>
    <string name="english_subject_kind">English lesson</string>
    <string name="elective_subject_kind">Elective subject lesson</string>
    <string name="block_subject_kind">Block subject lesson</string>
    <string name="subject_name_hint">Subject name</string>
    <string name="time_period_hint">Time period</string>
    <string name="room_hint">Room</string>
    <string name="type_hint">Type</string>
    <string name="kind_hint">Kind</string>
    <string name="professor_hint">Professor</string>
    <string name="elective_course_not_selected_hint">Elective course is not selected yet</string>
    <string name="english_group_not_selected_hint">English group is not selected yet</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="russian_language_title">Russian language</string>
    <string name="full_day_names_title">Display full day names</string>
    <string name="groups_list_title">Groups list</string>
    <string name="elective_subject_title">Elective subject</string>
    <string name="english_group_title">English group</string>
    <string name="elective_subjects_title">Elective subjects</string>
    <string name="english_groups_title">English groups</string>
    <string name="schedule_title">Schedule</string>
    <string name="feedback_title">Leave feedback</string>
    <string name="leave_feedback_here_hint">Leave your feedback here</string>
    <string name="send_feedback_title">Send</string>
    <string name="under_development_title">Under development</string>
</resources>
